fix z-index in hero section

--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -71,7 +71,7 @@
     border-radius: 40px;
     pointer-events: none;
     height: 100%;
-    z-index: 2;
+    z-index: 1;
     @include media-L-Laptop {
         right: -15%;
     }
@@ -82,7 +82,6 @@
         bottom: -10%;
         right: -29%;
         height: auto;
-        z-index: 1;
     }
 
     @include mediaMobile {
